--- a/app/i18n/locales/en-US.json
+++ b/app/i18n/locales/en-US.json
@@ -295,6 +295,22 @@
   "settings.paperWallet.printIdentificationCheckbox.label": "Print Paper Wallet account checksum",
   "settings.support.faq.blogLinkUrl": "https://emurgo.io/en/blog/yoroi-custom-themes",
   "settings.support.faq.blogLinkWrapper": "blog post",
+  "settings.menu.lock.link.label": "Screen lock",
+  "settings.lock.enable.label": "Enable Screen lock",
+  "settings.lock.disable.label": "Disable Screen lock",
+  "settings.lock.current.label": "Current Screen lock code",
+  "settings.lock.new.label": "Screen lock code",
+  "settings.lock.repeat.label": "Repeat Screen lock code",
+  "settings.lock.set": "Screen lock code creation",
+  "settings.lock.change": "Change Screen lock code",
+  "settings.lock.submit": "Save",
+  "settings.lock.note": "Note the screen lock code is separate from your spending password",
+  "settings.lock.length.error": "The Screen lock code should contain at least 6 characters",
+  "lock-screen.pin.error": "Incorrect Screen lock code",
+  "lock-screen.pin.label": "Screen lock code",
+  "lock-screen.title": "Unlock the screen",
+  "lock-screen.button": "Unlock",
+  "settings.lock.match-repeat.error": "The Screen lock codes don't match",
   "settings.support.faq.content": "If you are experiencing issues, please see the {faqLink} for guidance on known issues.",
   "settings.support.faq.faqLink": "FAQ on Yoroi website",
   "settings.support.faq.faqLinkURL": "https://yoroi-wallet.com/faq/",
