New Crowdin updates (#1594)

--- a/app/i18n/locales/es-ES.json
+++ b/app/i18n/locales/es-ES.json
@@ -25,6 +25,7 @@
   "api.errors.getTxsBodiesForUTXOsError": "Error recibido de la llamada a la API al intentar obtener los TxBodies.",
   "api.errors.getUtxosForAddressesApiError": "Error recibido del servidor al obtener los UTxOs.",
   "api.errors.getUtxosSumsForAddressesApiError": "Error recibido del servidor al obtener el saldo.",
+  "api.errors.hardwareUnsupportedError": "Esta billetera de hardware no está aceptada por el momento.",
   "api.errors.histoicalCoinPriceError": "Los datos históricos sobre el precio de la moneda no están disponibles en este momento.",
   "api.errors.invalidMnemonicError": "La frase de recuperación ingresada es inválida. Por favor, verifica que sea la correcta.",
   "api.errors.invalidWitnessError": "La firma es inválida.",
@@ -108,6 +109,7 @@
   "global.language.portuguese": "Português",
   "global.language.russian": "Pусский",
   "global.language.spanish": "Español",
+  "global.language.turkish": "Turco",
   "global.passwordInstructionsPaperWallet": "Nota: La contraseña de la Billetera de Papel debe ser de al menos <strong>10 caracteres</strong> de longitud.",
   "global.staleTxnWarningLine1": "Tu billetera ha cambiado desde que creaste esta transacción.",
   "global.staleTxnWarningLine2": "Aún puedes enviar esta transacción, pero puede fallar.",
@@ -154,7 +156,6 @@
   "profile.complexityLevel.subtitle": "Comprender la blockchain puede ser difícil, por lo que trataremos de mantener la interfaz lo más simple posible para ti",
   "profile.complexityLevel.title": "Nivel de Complejidad de la Interfaz",
   "profile.languageSelect.form.languageSelectLabel": "Elige tu idioma",
-  "profile.languageSelect.intro": "Estás en Yoroi Testnet de Shelley",
   "profile.languageSelect.title": "Selección de idioma",
   "profile.nightly.acknowledgedRisks": "Comprendo el riesgo",
   "profile.nightly.header": "<strong>Yoroi Nightly se actualiza automáticamente cada noche</strong> con las últimas características en desarrollo. Aunque nunca lanzaremos intencionalmente versiones con bugs o con código roto, las características pueden estar todavía en progreso y contener errores.",
@@ -303,7 +304,6 @@
   "uri.generate.dialog.address.label": "Dirección de destino",
   "uri.generate.dialog.amount.label": "Monto ({currency})",
   "uri.generate.dialog.confirm.label": "Generar",
-  "uri.generate.dialog.invalid.amount": "Por favor, ingresa un monto válido",
   "uri.generate.dialog.title": "Generar URL",
   "uri.invalid.dialog.title": "URL inválida",
   "uri.invalid.dialog.warning.text1": "El enlace al que has accedido es inválido.",
@@ -465,8 +465,8 @@
   "wallet.delegation.transaction.success.button.label": "Página de Seguimiento",
   "wallet.delegation.transaction.success.explanation": "Realiza un control del estado del stake pool, y del tiempo que resta para recibir una recompensa, desde la página de Seguimiento",
   "wallet.delegation.transaction.success.title": "Delegación exitosa",
-  "wallet.deprecation.itnLine1": "Las últimas recompensas fueron distribuidas en el epoch 190.",
-  "wallet.deprecation.itnLine2": "Las recompensas pueden ser reclamadas en la red principal (mainnet) una vez que se libere Shelley en la red principal.",
+  "wallet.deprecation.byronLine1": "La actualización del protocolo Shelley añade un nuevo tipo de billetera Shelley que permite la delegación.",
+  "wallet.deprecation.byronLine2": "Para delegar su ADA tendrá que actualizarse a una billetera Shelley.",
   "wallet.hw.common.error.101": "Los permisos necesarios no fueron concedidos por el usuario. Por favor, inténtalo de nuevo.",
   "wallet.hw.ledger.common.error.101": "Operación cancelada en el dispositivo Ledger.",
   "wallet.hw.ledger.common.error.102": "Operación cancelada por el usuario.",
@@ -561,11 +561,13 @@
   "wallet.send.form.amount.equalsAda": "equivale a {amount} ADA",
   "wallet.send.form.calculatingFee": "Calculando comisión...",
   "wallet.send.form.cannotSendToLegacy": "No puedes enviar a direcciones antiguas (cualquier dirección creada antes del 29 de noviembre de 2019)",
+  "wallet.send.form.cannotSendToReward": "No puedes enviar a una cuenta de compensación",
   "wallet.send.form.description.hint": "Puedes añadir un mensaje, si quieres",
   "wallet.send.form.description.label": "Descripción",
   "wallet.send.form.errors.invalidAddress": "Por favor, ingresa una dirección válida.",
   "wallet.send.form.errors.invalidAmount": "Por favor, ingresa un monto válido.",
   "wallet.send.form.errors.invalidTitle": "Por favor, ingresa un título de al menos 3 caracteres.",
+  "wallet.send.form.errors.tooSmallUtxo": "No puedes enviar menos de {minUtxo} ADA.",
   "wallet.send.form.receiver.hint": "Dirección de la Billetera",
   "wallet.send.form.receiver.label": "Dirección de destino",
   "wallet.send.form.sendAll.checkboxLabel": "Enviar todo",
