--- a/app/i18n/locales/fr-FR.json
+++ b/app/i18n/locales/fr-FR.json
@@ -25,6 +25,7 @@
   "api.errors.getTxsBodiesForUTXOsError": "Erreur reçue de l'Api lors de l'appel de TxBodies.",
   "api.errors.getUtxosForAddressesApiError": "Erreur reçue du serveur lors de l'appel de UTxOs.",
   "api.errors.getUtxosSumsForAddressesApiError": "Erreur reçue du serveur lors de l'appel du solde.",
+  "api.errors.hardwareUnsupportedError": "Ce portefeuille hardware n'est actuellement pas accepté.",
   "api.errors.histoicalCoinPriceError": "L'historique du cours de ce jeton n'est pas disponible en ce moment.",
   "api.errors.invalidMnemonicError": "do not translate",
   "api.errors.invalidWitnessError": "La signature n’est pas valide.",
@@ -108,6 +109,7 @@
   "global.language.portuguese": "Português",
   "global.language.russian": "Pусский",
   "global.language.spanish": "Español",
+  "global.language.turkish": "Turc",
   "global.passwordInstructionsPaperWallet": "Remarque : le mot de passe du Wallet Papier doit contenir au moins <strong>10 caractères</strong>.",
   "global.staleTxnWarningLine1": "Votre wallet a changé depuis que vous avez créé cette transaction.",
   "global.staleTxnWarningLine2": "Vous pouvez toujours envoyer cette transaction, mais elle pourrait échouer.",
@@ -154,7 +156,6 @@
   "profile.complexityLevel.subtitle": "Comprendre la blockchain peut être difficile, c'est pourquoi nous essaierons de garder une interface aussi simple que possible",
   "profile.complexityLevel.title": "Niveau de complexité de l'interface",
   "profile.languageSelect.form.languageSelectLabel": "Choisissez votre langue",
-  "profile.languageSelect.intro": "Vous êtes sur Yoroi Shelley Testnet",
   "profile.languageSelect.title": "Sélection de la langue",
   "profile.nightly.acknowledgedRisks": "Je comprends les risques",
   "profile.nightly.header": "<strong>Yoroi Nightly se met à jour automatiquement quotidiennement</strong> avec les dernières fonctionnalités. En aucun cas nous ne vous proposerons des bugs de manière intentionnelle. Les nouvelles fonctionnalités disponibles peuvent être encore en développement et peuvent contenir des erreurs.",
@@ -303,7 +304,6 @@
   "uri.generate.dialog.address.label": "Adresse du destinataire",
   "uri.generate.dialog.amount.label": "Montant ({currency})",
   "uri.generate.dialog.confirm.label": "Générer",
-  "uri.generate.dialog.invalid.amount": "Veuillez entrer un montant valide",
   "uri.generate.dialog.title": "Générer une URL",
   "uri.invalid.dialog.title": "URL invalide",
   "uri.invalid.dialog.warning.text1": "Le lien sur lequel vous avez cliqué est invalide.",
@@ -465,8 +465,8 @@
   "wallet.delegation.transaction.success.button.label": "Tableau de bord",
   "wallet.delegation.transaction.success.explanation": "Suivre l'état du groupe d'enjeu (pool) et le temps restant pour recevoir une récompense à partir de la page du tableau de bord.",
   "wallet.delegation.transaction.success.title": "Délégation réussie",
-  "wallet.deprecation.itnLine1": "Les dernières récompenses ITN ont été distribuées à l'époque 190.",
-  "wallet.deprecation.itnLine2": "Les récompenses peuvent être réclamées sur le réseau principal une fois que Shelley est libérée sur le réseau principal.",
+  "wallet.deprecation.byronLine1": "La mise à jour du protocole Shelley ajoute un nouveau type de portefeuille Shelley qui permet la délégation.",
+  "wallet.deprecation.byronLine2": "Pour déléguer votre ADA, vous devrez passer à un portefeuille Shelley.",
   "wallet.hw.common.error.101": "Les autorisations nécessaires n'ont pas été fournies par l'utilisateur. Veuillez réessayer.",
   "wallet.hw.ledger.common.error.101": "Opération annulée sur le Ledger.",
   "wallet.hw.ledger.common.error.102": "Opération annulée par l'utilisateur.",
@@ -561,11 +561,13 @@
   "wallet.send.form.amount.equalsAda": "équivaut à {amount} ADA",
   "wallet.send.form.calculatingFee": "Calcul des frais de transaction...",
   "wallet.send.form.cannotSendToLegacy": "Vous ne pouvez pas envoyer à des adresses de type Legacy (toute adresse créée avant le 29 novembre 2019)",
+  "wallet.send.form.cannotSendToReward": "Vous ne pouvez pas envoyer à un compte de compensation",
   "wallet.send.form.description.hint": "Vous pouvez ajouter un message si vous le souhaitez",
   "wallet.send.form.description.label": "Description",
   "wallet.send.form.errors.invalidAddress": "Veuillez entrer une adresse valide.",
   "wallet.send.form.errors.invalidAmount": "Veuillez entrer un montant valide.",
   "wallet.send.form.errors.invalidTitle": "Veuillez entrer un titre d'au moins 3 caractères.",
+  "wallet.send.form.errors.tooSmallUtxo": "Vous ne pouvez pas envoyer moins de {minUtxo} ADA.",
   "wallet.send.form.receiver.hint": "Adresse du wallet",
   "wallet.send.form.receiver.label": "Destinataire",
   "wallet.send.form.sendAll.checkboxLabel": "Envoyer tous les {currency}",
