restoration of 15-word shelley wallets

--- a/app/i18n/locales/en-US.json
+++ b/app/i18n/locales/en-US.json
@@ -324,10 +324,17 @@
   "wallet.add.optionDialog.create.normalWallet.description": "A standard wallet backed by a recovery phrase.",
   "wallet.add.optionDialog.create.paperWallet.description": "Paper wallets can be created even on devices not connected to the internet which makes them well-suited for single-use cold storage.",
   "wallet.add.optionDialog.restore.dialogTitle": "Restore wallet",
+  "wallet.add.optionDialog.restore.normal24Wallet.description": "If you have a recovery phrase consisting of 24 words, choose this option to restore your wallet.",
+  "wallet.add.optionDialog.restore.normal24Wallet.title": "Enter a 24-word recovery phrase",
   "wallet.add.optionDialog.restore.normalWallet.description": "If you have a Yoroi recovery phrase consisting of 15 words generated when you created a Yoroi Wallet, choose this option to restore your wallet.",
   "wallet.add.optionDialog.restore.normalWallet.title": "Enter a 15-word recovery phrase",
   "wallet.add.optionDialog.restore.paperWallet.description": "If you have generated a Yoroi paper wallet (which is usually printed and kept offline), you can choose this option to import the funds from your Yoroi paper wallet.",
   "wallet.add.optionDialog.restore.paperWallet.title": "Paper Wallet",
+  "wallet.add.optionDialog.walletEra.byronEra.description": "Wallets created before July 29th, 2020 are Byron-era wallets and cannot delegate.",
+  "wallet.add.optionDialog.walletEra.byronEra.title": "Byron-era (read-only) wallet",
+  "wallet.add.optionDialog.walletEra.dialogTitle": "Choose era",
+  "wallet.add.optionDialog.walletEra.shelleyEra.description": "Shelley-era wallets support delegation to stake pools.",
+  "wallet.add.optionDialog.walletEra.shelleyEra.title": "Shelley-era wallet",
   "wallet.add.page.create.title": "Create wallet",
   "wallet.add.page.create.tooltip": "Generate a new 15-word recovery phrase<br/>and create a Yoroi wallet.",
   "wallet.add.page.daedalusTransfer.title": "Transfer funds from a Daedalus wallet to Yoroi",
@@ -537,6 +544,7 @@
   "wallet.restore.dialog.title.verify.paper.label": "Verify Yoroi Paper wallet",
   "wallet.restore.dialog.upgrade.noop": "Your wallet did not need to be upgraded",
   "wallet.restore.dialog.verify.accountId.byron.label": "Byron account checksum:",
+  "wallet.restore.dialog.verify.accountId.itn.label": "ITN account checksum:",
   "wallet.restore.dialog.verify.accountId.label": "Your Wallet Account checksum:",
   "wallet.restore.dialog.verify.accountId.shelley.label": "Shelley account checksum:",
   "wallet.restore.dialog.verify.addressesLabel": "Your Wallet address[es]:",
@@ -545,6 +553,7 @@
   "wallet.restore.dialog.verify.intro.line2": "Make sure account checksum and icon match what you remember.",
   "wallet.restore.dialog.verify.intro.line3": "Make sure addresses match what you remember.",
   "wallet.restore.dialog.verify.intro.line4": "If you've entered wrong mnemonics or a wrong paper wallet password - you will just open another empty wallet with wrong account checksum and wrong addresses.",
+  "wallet.restore.dialog.verify.itn.addressesLabel": "ITN Wallet address[es]:",
   "wallet.restore.dialog.verify.shelley.addressesLabel": "Shelley Wallet address[es]:",
   "wallet.restore.dialog.verify.title": "Verify Restored Wallet",
   "wallet.restore.dialog.verify.wallet.button.label": "Verify wallet",
