--- a/app/i18n/locales/en-US.json
+++ b/app/i18n/locales/en-US.json
@@ -409,7 +409,7 @@
   "wallet.currency.pick.cardano": "Cardano is the first provably secure proof of stake protocol",
   "wallet.currency.pick.ergo": "Ergo builds advanced cryptographic features and radically new DeFi functionality on the rock-solid foundations laid by a decade of blockchain theory and development",
   "wallet.currency.pick.header": "Pick a currency or platform",
-  "wallet.dashboard.empty.text": "Go to Simple or Advance Staking to choose what stake pool you want to delegate in. Note, you may delegate only to one stake pool in this Tesnnet",
+  "wallet.dashboard.empty.text": "Go to Simple or Advance Staking to choose what stake pool you want to delegate in.",
   "wallet.dashboard.empty.title": "You have not delegated your ADA yet",
   "wallet.dashboard.epochEndTitle": "Time until Epoch end",
   "wallet.dashboard.epochProgress": "Epoch progress",
@@ -467,7 +467,7 @@
   "wallet.delegation.transaction.explanationLine2": "You can switch to delegate to a different stake pool at any time",
   "wallet.delegation.transaction.explanationLine3": "You can cancel your delegation at any time",
   "wallet.delegation.transaction.generation": "Generating transaction",
-  "wallet.delegation.transaction.stakePoolHash": "Stake pool hash",
+  "wallet.delegation.transaction.stakePoolHash": "Stake pool id",
   "wallet.delegation.transaction.stakePoolName": "Stake pool name",
   "wallet.delegation.transaction.success.button.label": "Dashboard page",
   "wallet.delegation.transaction.success.explanation": "Track the status of the stake pool and the amount of time remaining to receive a reward from the Dashboard page",
