--- a/app/i18n/locales/en-US.json
+++ b/app/i18n/locales/en-US.json
@@ -31,6 +31,7 @@
   "api.errors.invalidWitnessError": "The signature is invalid.",
   "api.errors.noInputsError": "The wallet restored from your recovery phrase is empty. Please check your recovery phrase and attempt restoration again.",
   "api.errors.pendingTransactionError": "Error while updating pending transactions.",
+  "api.errors.poolMissingApiError": "Could not find this pool. Double-check the ID and make sure the pool was not deregistered.",
   "api.errors.rollbackApiError": "Rollback was detected.",
   "api.errors.sendTransactionApiError": "Error received from server while sending transaction.",
   "api.errors.sendTransactionError": "Error received from api method call while sending transaction.",
@@ -438,7 +439,7 @@
   "wallet.dashboard.stakePool.circleText": "Revenue",
   "wallet.dashboard.stakePool.cost": "Cost",
   "wallet.dashboard.stakePool.created": "Created",
-  "wallet.dashboard.stakePool.descriptionButton": "Full description",
+  "wallet.dashboard.stakePool.descriptionButton": "Description",
   "wallet.dashboard.stakePool.fullness": "Fullness",
   "wallet.dashboard.stakePool.margins": "Margins",
   "wallet.dashboard.stakePool.performance": "Performance",
@@ -462,6 +463,8 @@
   "wallet.debugwallet.explanation1": "The wallet you selected ({checksumTextPart}) is for testing & debugging.",
   "wallet.debugwallet.explanation2": "To avoid any issues, do not use this wallet.<br />Instead, use Yoroi to create a new wallet.",
   "wallet.debugwallet.explanation3": "If you did not expect this message, please {contactSupportLink}.",
+  "wallet.delegate.form.invalidPoolId": "Invalid pool id",
+  "wallet.delegation.poolInfo.fetching": "Fetching pool information",
   "wallet.delegation.transaction.approximationLabel": "Current approximation of rewards that you will receive per epoch:",
   "wallet.delegation.transaction.explanationLine1": "You can only delegate to one stake pool at a time",
   "wallet.delegation.transaction.explanationLine2": "You can switch to delegate to a different stake pool at any time",
@@ -487,7 +490,6 @@
   "wallet.nav.type.paper": "Paper wallet",
   "wallet.nav.type.standard": "Standard wallet",
   "wallet.nav.type.trezor": "Trezor wallet",
-  "wallet.navigation.delegationAdvance": "Delegation (Advance)",
   "wallet.navigation.delegationDashboard": "Dashboard",
   "wallet.navigation.delegationSimple": "Delegation",
   "wallet.navigation.receive": "Receive",
@@ -571,18 +573,13 @@
   "wallet.send.form.calculatingFee": "Calculating fee...",
   "wallet.send.form.cannotSendToLegacy": "You cannot send to legacy addresses (any address created before November 29th, 2019)",
   "wallet.send.form.cannotSendToReward": "You cannot send to a reward account",
-  "wallet.send.form.description.hint": "You can add a message if you want",
-  "wallet.send.form.description.label": "Description",
   "wallet.send.form.errors.invalidAddress": "Please enter a valid address.",
   "wallet.send.form.errors.invalidAmount": "Please enter a valid amount.",
-  "wallet.send.form.errors.invalidTitle": "Please enter a title with at least 3 characters.",
   "wallet.send.form.errors.tooSmallUtxo": "Cannot send less than {minUtxo} ADA.",
   "wallet.send.form.receiver.hint": "Wallet Address",
   "wallet.send.form.receiver.label": "Receiver",
   "wallet.send.form.sendAll.checkboxLabel": "Send all {currency}",
   "wallet.send.form.sendingIsDisabled": "Cannot send a new transaction while an existing one is still pending.",
-  "wallet.send.form.title.hint": "E.g. Money for Frank",
-  "wallet.send.form.title.label": "Title",
   "wallet.send.form.transactionFeeError": "Not enough Ada for fees. Try sending a smaller amount.",
   "wallet.send.ledger.confirmationDialog.info.line.1": "After connecting your Ledger device to your computer's USB port, press the Send using Ledger button.",
   "wallet.send.ledger.confirmationDialog.info.line.2": "Make sure the Cardano ADA app remains open on the Ledger device throughout the process.",
